--- a/src/app/components/header-menu/header-nav-links/header-nav-links.scss
+++ b/src/app/components/header-menu/header-nav-links/header-nav-links.scss
@@ -16,6 +16,10 @@
 
     &:hover {
       color: var(--text-hover-color);
+      -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      transform: scale(1.1);
     }
   }
 }
