--- a/src/app/components/home/self-writing-text/self-writing-text.scss
+++ b/src/app/components/home/self-writing-text/self-writing-text.scss
@@ -12,11 +12,12 @@
 }
 
 .vertical-bar {
-  color: var(--text-color);
-  font-weight: 200;
-  font-size: 2.5rem;
-  line-height: 1;
   display: inline-block;
+  width: 3px;
+  height: 0.95em;
+  margin-left: 0.05em;
+  vertical-align: top;
+  background-color: var(--text-color);
   animation: blink 1s steps(1, end) infinite;
 }
 
